org.mmisw.ont - Ontology and Term URI resolver
Carlos Rueda - MMI / MBARI
$Id$

ChangeLog

2015-03-21  2.4.0
  - start refactoring for repository access (with user authentication)

2015-02-17  2.3.1
  - fix #347 /ont/<authority> not resolving

2015-02-08  2.3.0
  - more efficient inspection of request parameters

2015-01-31  2.2.1
  - operation to (un)mark ontology as 'testing'

2014-12-29  2.2.0
  - some special requests now only accepted via POST

2014-11-25  2.1.3
  - fix #333 "URL for simple list by authority doesn't work for CUAHSI"

2014-07-15  2.1.1
  - 2.1.1: correct fix for Issue #123: "encoded URI not properly handled"

2013-10-11  2.0.43
    -include author and version in OntologyInfo
    -new listonts operation

2013-09-13  2.0.42
    fix logo img in sparql.html

2013-09-07  2.0.42
    update logo

2013-01-22  2.0.39.beta
	Changes addressing
	301: triple store not updated upon deletions in mapping ontology.
	307: Triple store not properly updated
		- Ag4TripleStore._removeStatementsFromDefaultGraph: supporting routine
		  to remove the statements in a given graph from the default graph.
	More tests and adjustments required.


2013-01-14  2.0.38.beta
	- Fix 300: "No suitable response format available"
	  Ag4TripleStore.executeQuery: If 406 Not Acceptable is returned, then
	  retry with "application/rdf+xml". If this also fails then retry with "text/plain".

2013-01-02  2.0.37.beta
	- Fix 303: "re-hosted ontologies failing to load"
	  This was a regression caused by this change on 2012-08-27:
	  http://code.google.com/p/mmisw/source/diff?spec=svn1397&r=1379&format=side&path=/trunk/org.mmisw.ont/src/org/mmisw/ont/client/OntClientUtil.java
	  but OntClientUtil.retrieveModel should actually resolve the URO against the Ont service, not directly.
	  This change was definitely unintended and I'm just reverting it.

2012-12-07  2.0.31.beta
	- RegularFileDispatcher._showServiceInfo: minor adjustment in main entry point
	  page to point to the ORR as well.
