@@ -3,6 +3,8 @@ package org.mmisw.ont.client.repoclient.bioportal;
 import org.mmisw.ont.client.SignInResult;
 import org.mmisw.ont.client.repoclient.RepoClient;
 
+import java.util.Map;
+
 public class BioportalClient implements RepoClient {
 
     private final String aquaportalRestUrl;
@@ -16,5 +18,12 @@ public class BioportalClient implements RepoClient {
     @Override
     public SignInResult getSession(String userName, String userPassword) throws Exception {
         return userAuthenticator.getSession(userName, userPassword);
+    }
+
+    @Override
+    public SignInResult createUpdateUserAccount(Map<String, String> values) throws Exception {
+        UserAccountManager uacu = new UserAccountManager(values);
+        return uacu.doIt(aquaportalRestUrl);
+
     }
 }
