@@ -5,7 +5,9 @@ $Id$
 ChangeLog
 
 2015-03-21  2.4.0
-  - start refactoring for repository access (with user authentication)
+  - start refactoring for repository access
+      - getSession
+      - createUpdateUserAccount
 
 2015-02-17  2.3.1
   - fix #347 /ont/<authority> not resolving
